--- a/registrasationform/package.json
+++ b/registrasationform/package.json
@@ -7,11 +7,11 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "mongoose": "^6.1.1",
-    "nodemon": "^2.0.15",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-router": "^6.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
