--- a/Server/package.json
+++ b/Server/package.json
@@ -5,7 +5,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.1.1"
+    "mongoose": "^6.1.1",
+    "nodemailer": "^6.7.2"
   },
   "name": "server",
   "version": "1.0.0",
